--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             margin-bottom: 20px;
         }
         .apple-pay-button {
+            display: none; /* Initially hidden */
             width: 100%;
             height: 50px;
             background: black;
@@ -40,6 +41,9 @@
             border-radius: 8px;
             font-size: 18px;
             cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .apple-pay-button img {
             height: 24px;
@@ -51,9 +55,8 @@
     <div class="payment-container">
         <h2>Secure Checkout</h2>
         <p>Total Amount: <strong>$10.00</strong></p>
-        <p id="no-apple-pay-message" style="display: none; color: red;">Apple Pay is not available on this device.</p>
         <button id="apple-pay-button" class="apple-pay-button">
-            <img src="images/apple-pay-mark-black.svg" alt="Apple Pay" width="24">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Apple_Pay_logo.svg" alt="Apple Pay">
             Pay with Apple Pay
         </button>
     </div>
@@ -61,9 +64,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             if (window.ApplePaySession && ApplePaySession.canMakePayments()) {
-            } else {
-                document.getElementById("apple-pay-button").style.display = "none";
-                document.getElementById("no-apple-pay-message").style.display = "block";
+                document.getElementById("apple-pay-button").style.display = "flex";
             }
         });
     </script>
