--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         </button>
     </div>
 
+    <script src="https://applepay.cdn-apple.com/jsapi/v1/apple-pay-sdk.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             if (window.ApplePaySession && ApplePaySession.canMakePayments()) {
