--- a/index.html
+++ b/index.html
@@ -63,21 +63,6 @@
     </div>
 
     <script src="https://applepay.cdn-apple.com/jsapi/v1/apple-pay-sdk.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            console.log('DOM fully loaded and parsed');
-            if (window.ApplePaySession) {
-                console.log('Apple Pay Session available');
-                if (ApplePaySession.canMakePayments()) {
-                    console.log('Can make payments with Apple Pay');
-                    document.getElementById("apple-pay-button").style.display = "flex";
-                } else {
-                    console.log('Cannot make payments with Apple Pay');
-                }
-            } else {
-                console.log('Apple Pay Session not available');
-            }
-        });
-    </script>
+    <script src="applescript.js"></script>
 </body>
 </html>
